<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Cranium</string>
    <string name="title_activity_main">Main Lobby</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_history">History Menu</string>

    <!-- Basic login text -->
    <string name="confirm_registry">Username not found. You want to create a new user with that email and password?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sign_in">Sign In Or Register</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_username">Username</string>
    <string name="updatingReport">Updating Report</string>

    <string name="history_text">Welcome to History!</string>

    <!-- Hangman Game text -->
    <string name="hangman_btn">Play Hangman Game</string>
    <string name="title_activity_hangman_game">Hangman Game</string>
    <string name="gallows">The gallows</string>
    <string name="head">The head</string>
    <string name="body">The body</string>
    <string name="arm">The arms</string>
    <string name="leg">The legs</string>
    <string name="pick_category">Choose your category</string>
    <string name="help_message">To play the game, you guess a letter and remember you have 6 lives!</string>
    <string name="category">Choose a Category</string>

    <!--Achievements and Hangman Leaderboard-->
    <string name="correct_guess_achievement">CgkI6JCEvPoDEAIQAA</string>
    <string name="hangman_leaderboard">CgkI6JCEvPoDEAIQCg</string>
    <string name="show_achievements">Badges</string>

    <!-- Scramble Game text -->

    <string name="TextBox">Text</string>
    <string name="EnglishText">Welcome to English</string>
    <string name="GameBtn">Play Scramble</string>


    <!-- Google+ Button text -->
    <string name="btn_logout_from_google">Logout</string>
    <string name="btn_revoke_access">Revoke Access</string>
    <string name="btn_main_menu">Go to Main Menu</string>
    <string name="search">search</string>
    <string name="failed">Failed</string>
    <string name="error_incorrect_password">Incorrect Password</string>
    <string name="error_invalid_password">Invalid Password</string>
    <string name="error_field_required">Field required</string>
    <string name="error_invalid_email">Invalid username</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_history_youtube">HistoryYoutubeActivity</string>
    <string name="actionbar_tutorial">Testing the Youtube video activity.</string>

    <!-- Youtube API text -->
    <string name="error_player">Could not initialise player</string>
    <string name="history_tutorial">Welcome to your History tutorial playlist on Dictatorship and Democracy</string>
    <string name="landscape_fullscreen">Landscape</string>
    <string name="enter_fullscreen">Enter fullscreen</string>
    <string name="english_tutorial">Welcome to your English tutorial on grammar</string>

    <!-- Main Button text -->
    <string name="maths_btn">Maths</string>
    <string name="eng_btn">English</string>
    <string name="history_btn">History</string>
    <string name="geo_btn">Geography</string>
    <string name="welcome_text">Welcome to Cranium!</string>
    <string name="rec_text">Recommended to sign with google+ for better user experience</string>

    <!-- Google Play Services Games -->
    <string name="app_id">135954237544</string>
    <string name="title_activity_hangman_category">Hangman Category</string>
    <string name="youtube_search_text">Youtube Playlist Tutorial</string>
    <string name="play_hangman_text">Play Hangman</string>
    <string name="gamehelper_unknown_error">Unknown error</string>
    <string name="gamehelper_sign_in_failed">Sign In failed</string>
    <string name="gamehelper_app_misconfigured">Achievements are coming soon!</string>
    <string name="gamehelper_license_failed">License failed</string>
    <string name="logout_btn">Logout</string>
    <string name="app_misconfigured">Achievements are coming soon!</string>
    <string name="sign_in_failed">Sign in failed</string>
    <string name="license_failed">License failed</string>
    <string name="leave_game">End Game</string>




    <!-- English Section -->
    <string name="classText">Scramble Class #1</string>
    <string name="classText2">Scramble Class #2</string>
    <string name="classText3">Scramble Class #3</string>
    <string name="scramble_leaderboard">CgkI6JCEvPoDEAIQCw</string>
    <string name="english_correct_guess">CgkI6JCEvPoDEAIQBA</string>

    <!-- Geography Section -->
    <string name="geo_text">Welcome to Geography</string>
    <string name="geo_quiz_text_1">Geography Quiz #1</string>
    <string name="geo_quiz_text_2">Geography Quiz #2</string>
    <string name="geo_quiz_text_3">Geography Quiz #3</string>
    <string name="british_flag">British</string>
    <string name="irish_flag">Irish</string>
    <string name="swedish_flag">Swedish</string>
    <string name="swiss_flag">Switzerland</string>
    <string name="danish_flag">Denmark</string>
    <string name="german_flag">Germany</string>
    <string name="polish_flag">Poland</string>
    <string name="italian_flag">Italy</string>
    <string name="spanish_flag">Spain</string>
    <string name="french_flag">France</string>
    <string name="Switzerland">Switzerland</string>
    <string name="Denmark">Denmark</string>
    <string name="Italy">Italy</string>
    <string name="Spain">Spain</string>
    <string name="Britain">Britain</string>
    <string name="France">France</string>
    <string name="Germany">Germany</string>
    <string name="Ireland">Ireland</string>
    <string name="Poland">Poland</string>
    <string name="Swedish">Sweden</string>
    <string name="title_activity_geo_you_tube_player">GeoYouTubePlayer</string>
    <string name="geo_tutorial">Welcome to your Geography tutorial</string>

    <!--Maths Section -->
    <string name="title_activity_maths_you_tube_player">MathsYouTubePlayer</string>
    <string name="maths_tutorial">Welcome to your Maths playlist tutorial!</string>
    <string name="maths_text">Welcome to Maths</string>
    <string name="maths_tut">Maths Tutorials</string>
    <string name="maths_quiz">Maths Quiz</string>
    <string name="question1Text">3+7 = ?</string>
    <string name="image02">image_02</string>
    <string name="image03">image04</string>
    <!-- Questions -->
    <string name="question1aText">112 + 38 ÷ 3 = __</string>
    <string name="question2aText">120 - 15 × 5 = __</string>
    <string name="question3aText">2,376 × 15 = __</string>
    <string name="question4aText">1/3 + 1/4 + __ = 1</string>
    <string name="question5aText">1652 ÷ 28 = __</string>
    <string name="question6aText">555 + 656 = __</string>
    <string name="question7aText">722 × 16 = __ </string>
    <string name="question8aText">984 ÷ 74 = __ </string>
    <string name="question9aText">1/6 + 2/3 = __</string>
    <string name="question10aText">158 - 101 × 4 = __ </string>

    <string name="question1bText">What is 5/7 - 2/8 = __</string>
    <string name="question2bText">What is the square root of 225?</string>
    <string name="question3bText">If c=7, then what is c(21) + 8?</string>
    <string name="question4bText">What is 18x6-24+7(5+6)? </string>
    <string name="question5bText">What is 12/18 divided by 7/19?</string>
    <string name="question6bText">Calculate 18+3+22+24+20+9</string>
    <string name="question7bText">Which one of these is not a quadrilateral?</string>
    <string name="question8bText">What is the formulae for finding area?</string>
    <string name="question9bText">what is 4 to the power of three?</string>
    <string name="question10bText">14 times 11 = __</string>


    <string name="leaderboard_text">Leaders</string>
    <string name="maths_badge">CgkI6JCEvPoDEAIQBw </string>
    <string name="maths_leaderboard">CgkI6JCEvPoDEAIQDA</string>




    <!-- Profile Section -->
    <string name="Profile">Profile</string>
    <string name="profileText">Welcome to your profile page!</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="score" />
    <string name="exit">Exit</string>
    <string name="geo_leaderboard">CgkI6JCEvPoDEAIQDQ</string>


</resources>
