<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/congruent_pentagon"
    tools:context="com.cranium.ianarbuckle.craniumapp.ProfileActivity">

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_weight="2" >

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="18dp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:text="@string/profileText"
        android:id="@+id/profileText"
        android:textStyle="bold"
        android:layout_marginLeft="30dp"
        android:textSize="20sp" />
    <Button
        android:id="@+id/show_achievements"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/show_achievements"
        android:onClick="onClick"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFFFF"/>

    <Button
        android:id="@+id/btn_sign_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/btn_logout_from_google"
        android:layout_marginTop="0dp"
        android:onClick="onClick"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFFFF"/>

    <Button
        android:id="@+id/btn_revoke_access"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/roundedbutton"
        android:text="@string/btn_revoke_access"
        android:onClick="onClick"
        android:layout_marginBottom="10dp"
        android:textColor="#FFFFFFFF"/>

    <Button
        android:id="@+id/btn_main_menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/btn_main_menu"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:textColor="#FFFFFFFF"/>




</LinearLayout>
