<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

  <com.google.android.youtube.player.YouTubePlayerView
      android:id="@+id/player"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>

  <LinearLayout
      android:id="@+id/other_views"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:padding="5dp"
      android:orientation="vertical"
      android:background="@color/background_material_light">

      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@android:style/TextAppearance.Small"
          android:text="@string/history_tutorial" />

      <CheckBox
        android:id="@+id/landscape_fullscreen_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/landscape_fullscreen"/>

    <Button
        android:id="@+id/fullscreen_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="100dp"
        android:background="@drawable/roundedbutton"
        android:padding="10dp"
        android:text="@string/enter_fullscreen"
        android:textColor="#FFFFFFFF"
        android:textStyle="bold" />

      <Button
          android:layout_width="111dp"
          android:layout_height="wrap_content"
          android:text="Exit"
          android:id="@+id/exit"
          android:layout_gravity="center_horizontal"
          android:background="@drawable/roundedbutton"
          android:padding="10dp"
          android:layout_marginRight="10dp"
          android:layout_marginTop="10dp"
          android:textColor="#FFFFFFFF"
          android:textStyle="bold"
          android:onClick="OnClick"/>

  </LinearLayout>

</LinearLayout>
