<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cranium.ianarbuckle.craniumapp.Maths.MathsActivity"
    android:background="@drawable/geometry">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:id="@+id/gridLayout2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maths_tut"
            android:id="@+id/mathsYt"
            android:background="@drawable/roundedbutton"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"
            android:padding="10dp"
            android:layout_row="0"
            android:layout_column="0"
            android:onClick="OnClick" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/maths_quiz"
            android:id="@+id/mathsQuizBtn"
            android:background="@drawable/roundedbutton"
            android:textStyle="bold"
            android:textColor="#FFFFFFFF"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:onClick="OnClick"
            android:layout_row="1"
            android:layout_column="0" />

    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/maths_text"
        android:id="@+id/mathsView"
        android:textStyle="bold"
        android:layout_marginTop="165dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:id="@+id/llProfile"
        android:layout_width="fill_parent"
        android:layout_height="140dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:id="@+id/imgProfilePic"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="google" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical"
            android:layout_weight="2">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_logout_from_google"
                android:id="@+id/btn_sign_out"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:onClick="OnClick"
                android:padding="10dp"
                android:textStyle="bold"
                android:textColor="#FFFFFFFF"
                android:background="@drawable/roundedbutton"
                android:layout_gravity="right" />

            <TextView
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:layout_marginRight="100dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:textStyle="bold" />


        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
