
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:background="#FFFFFFFF"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="16dp"

        >

        <!-- Category selector -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/category"
            android:id="@+id/catText"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"

            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:visibility="visible"
            android:id="@+id/category">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dictatorship &amp; Democracy"
                android:id="@+id/cat1Btn"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_marginTop="50dp"
                android:onClick="onClickCat"
                android:background="@drawable/hangmanbuttons"
                android:textStyle="bold"
                android:textColor="#FFFfFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Irish History"
                android:id="@+id/cat2Btn"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                android:onClick="onClickCat"
                android:background="@drawable/hangmanbuttons"
                android:textStyle="bold"
                android:textColor="#FFFfFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="American Presidents"
                android:id="@+id/cat3Btn"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                android:onClick="onClickCat"
                android:background="@drawable/hangmanbuttons"
                android:textStyle="bold"
                android:textColor="#FFFfFFFF" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Russian Revolution"
                android:id="@+id/cat4Btn"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_marginTop="20dp"
                android:onClick="onClickCat"
                android:background="@drawable/hangmanbuttons"
                android:textStyle="bold"
                android:textColor="#FFFfFFFF" />
        </GridLayout>




        <RelativeLayout
            android:id="@+id/gallow"
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:paddingTop="15dp"

            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/gallows"
                android:paddingRight="90dp"
                android:paddingTop="0dp"
                android:src="@drawable/hangman_gallows" />
            <ImageView
                android:id="@+id/head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/head"
                android:paddingLeft="105dp"
                android:paddingTop="25dp"
                android:src="@drawable/android_hangman_head" />

            <ImageView
                android:id="@+id/body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/body"
                android:paddingLeft="103dp"
                android:paddingTop="40dp"
                android:src="@drawable/android_hangman_body" />

            <ImageView
                android:id="@+id/arm1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arm"
                android:paddingLeft="122dp"
                android:paddingTop="25dp"
                android:src="@drawable/android_hangman_arm1" />

            <ImageView
                android:id="@+id/arm2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/arm"
                android:paddingLeft="225dp"
                android:paddingTop="25dp"
                android:src="@drawable/android_hangman_arm2" />

            <ImageView
                android:id="@+id/leg1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/leg"
                android:paddingLeft="155dp"
                android:paddingTop="175dp"
                android:src="@drawable/android_hangman_leg1" />

            <ImageView
                android:id="@+id/leg2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/leg"
                android:paddingLeft="190dp"
                android:paddingTop="175dp"
                android:src="@drawable/android_hangman_leg2" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/word"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="#FFFFFFFF"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp"


            >
        </LinearLayout>

        <GridView
            android:id="@+id/letters"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="0dp"
            android:background="#FFFFFFFF"
            android:horizontalSpacing="5dp"
            android:numColumns="7"
            android:padding="5dp"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp"

            />




    </LinearLayout>


